fix alignment on "get directions" button

--- a/maps.css
+++ b/maps.css
@@ -96,7 +96,7 @@
 
 #get-directions {
 	background: #900;
-	width: 152px;
+	width: 135px;
 	border: none;
 	color: #fff;
 	font-size: 12px;
